@@ -567,6 +567,70 @@ if FILE exists, display everything between if_existing and the matching $endif
 if MOUNTPOINT is mounted, display everything between if_mounted and the matching $endif
 
 .TP 
+\fBinfopipe_bar\fR \fB(height),(width)\fR 
+XMMS/BMP InfoPipe progress bar
+
+.TP 
+\fBinfopipe_bitrate\fR 
+XMMS/BMP InfoPipe bitrate of current tune
+
+.TP 
+\fBinfopipe_channels\fR 
+XMMS/BMP InfoPipe number of audio channels of current tune
+
+.TP 
+\fBinfopipe_file\fR 
+XMMS/BMP InfoPipe full path and file name of current tune
+
+.TP 
+\fBinfopipe_frequency\fR 
+XMMS/BMP InfoPipe sampling frequency of current tune
+
+.TP 
+\fBinfopipe_protocol\fR 
+XMMS/BMP InfoPipe protocol
+
+.TP 
+\fBinfopipe_playlist_currtune\fR 
+XMMS/BMP InfoPipe playlist index number of current tune
+
+.TP 
+\fBinfopipe_playlist_tunes\fR 
+XMMS/BMP InfoPipe number of tunes in the playlist
+
+.TP 
+\fBinfopipe_position\fR 
+XMMS/BMP InfoPipe play position (MM:SS) of current tune
+
+.TP 
+\fBinfopipe_protocol\fR 
+XMMS/BMP InfoPipe protocol
+
+.TP 
+\fBinfopipe_status\fR 
+XMMS/BMP InfoPipe status (Playing/Paused/Stopped)
+
+.TP 
+\fBinfopipe_time\fR 
+XMMS/BMP InfoPipe total time length (MM:SS) of current tune
+
+.TP 
+\fBinfopipe_title\fR 
+XMMS/BMP InfoPipe title of current tune
+
+.TP 
+\fBinfopipe_usec_position\fR 
+XMMS/BMP InfoPipe uSec position of current tune
+
+.TP 
+\fBinfopipe_usec_time\fR 
+XMMS/BMP InfoPipe uSec total time length of current tune 
+
+.TP 
+\fBinfopipe_version\fR 
+XMMS/BMP InfoPipe plugin version
+
+.TP 
 \fBkernel\fR 
 Kernel version
 
